# LLM-tuning-kernel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  _bench_utils.py  bench_attention.py  bench_flce.py  bench_ops.py
docs/: 00-why-kernels.md  01-triton-101.md  02-rmsnorm.md  03-rope.md  04-swiglu.md  05-cross-entropy.md  06-fused-linear-ce.md  07-flash-attention.md  08-applying-to-models.md
examples/: finetune_qlora.ipynb  finetune_qlora.py
src/ktune/: __init__.py
src/ktune/integrations/: __init__.py  hf_loss.py  patch.py
src/ktune/nn/: __init__.py
src/ktune/ops/: __init__.py  cross_entropy.py  flash_attention.py  fused_linear_ce.py  rmsnorm.py  rope.py  swiglu.py
src/ktune/utils/: __init__.py  reference.py  runtime.py
tests/: conftest.py  test_integration.py  test_kernels_gpu.py  test_references.py
